Create webapp folder

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Scatter Plot</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="web_app/style.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 
@@ -24,7 +24,7 @@
         </div>
     </div>
 
-    <script src="web_app.js"></script>
+    <script src="web_app/web_app.js"></script>
 </body>
 
 </html>
