--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
     <h1>BST Performance Charts</h1>
+    <div id="bstTable"></div>
     <div class="container">
         <div class="chart-container">
             <canvas id="addingChart"></canvas>
