Added config box

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 
 <body>
     <h1>BST Performance Charts</h1>
-    <div id="bstTable"></div>
+    <div class="table-container">
+
+        <div id="bstTable"></div>
+        <div id="configBox"></div>
+    </div>
     <div class="container">
         <div class="chart-container">
             <canvas id="addingChart"></canvas>
