--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <h1>BST Performance Charts</h1>
     <div class="table-container">
-
         <div id="bstTable"></div>
+        <div id="bstChart"><canvas id="bstChartCan"></canvas></div>
         <div id="configBox"></div>
     </div>
     <div class="container">
